force-app/main/default/objects/NotificationTemplate__c/NotificationTemplate__c.object-meta.xml
<CustomObject>
    <description>[P2] 공통 - App 알림, Email 알림.. 등 Template 관리</description>
    <label>Notification Template</label>
    <nameField>
        <displayFormat>NT{YY}{MM}{DD}{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>