force-app/main/default/objects/NotificationTemplate__c/fields/EmailDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>EmailDeveloperName__c</fullName>
    <description>Classic Email Template Developer Name</description>
    <label>Email Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>