force-app/main/default/objects/NotificationTemplate__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <description>알림 관리</description>
    <label>Notification</label>
    <referenceTo>Notification__c</referenceTo>
    <relationshipLabel>Notification Template</relationshipLabel>
    <relationshipName>Notification_Template</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>