force-app/main/default/objects/NotificationTemplate__c/recordTypes/App.recordType-meta.xml
<RecordType>
    <fullName>App</fullName>
    <active>true</active>
    <description>SFDC 종 템플릿</description>
    <label>App</label>
</RecordType>